# FastAPI-course

./: README.md  first_lesson.py
second-lesson/: languages.py  main.py  pyproject.toml
second-lesson/findby/: crud.py  schemas.py  views.py
